--- a/blog-details.html
+++ b/blog-details.html
@@ -25,12 +25,51 @@
     <main class="main-workdetails-page">
 
         <!-- Header -->
-        <?php
-    require "hedder.php";
-    ?>
-    <?php
-    require "loading.php"
-    ?>
+   <!-- Header -->
+   <header class="header-area">
+            <div class="container">
+                <div class="gx-row d-flex align-items-center justify-content-between">
+                    <a href="index.html" class="logo">
+                        <img src="images/logo.svg" alt="Logo" style="height: 60px;" >
+                    </a>
+
+                    <nav class="navbar">
+                        <ul class="menu">
+                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="works.html">Works</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                        <a href="contact.html" class="theme-btn">Let's talk</a>
+                    </nav>
+
+                    <a href="contact.html" class="theme-btn">Let's talk</a>
+
+                    <div class="show-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <div class="loader-wrap" id="loader">
+        <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
+            <path id="svg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
+        </svg>
+
+        <div class="loader-wrap-heading">
+            <div class="load-text ">
+                <span>L</span>
+                <span>o</span>
+                <span>a</span>
+                <span>d</span>
+                <span>i</span>
+                <span>n</span>
+                <span>g</span>
+            </div>
+        </div>
+    </div>
 
         <!-- Breadcrumb -->
         <section class="breadcrumb-area">
@@ -246,9 +285,25 @@
 
 
         <!-- Footer -->
-        <?php 
-        require "footer.php";
-        ?>
+      <!-- Footer -->
+<footer class="footer-area">
+            <div class="container">
+                <div class="footer-content text-center">
+                    <a href="index.html" class="logo">
+                       
+                    </a>
+                    <ul class="footer-menu">
+                             <li ><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="works.html">Works</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                    <p class="copyright">
+                        &copy; All rights reserved by <span>Rudevs Coperation</span>
+                    </p>
+                </div>
+            </div>
+        </footer>
     </main>
     
 
