--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@
                 <div class="about-details" data-aos="zoom-in">
                     <h1 class="section-heading " data-aos="fade-up"><img src="https://cdn.discordapp.com/attachments/1212747777004797975/1212785864296366130/star-2.png?ex=65f319da&is=65e0a4da&hm=d355ce86f6c569f6292aac5e17f98a36a0b6bfec62e30b28280a16377053b53a&" alt="Star">COO<img src="https://cdn.discordapp.com/attachments/1212747777004797975/1212785864296366130/star-2.png?ex=65f319da&is=65e0a4da&hm=d355ce86f6c569f6292aac5e17f98a36a0b6bfec62e30b28280a16377053b53a&" alt="Star"></h1>
                     <div class="about-details-inner shadow-box">
-                        <h1 class="section-heading " data-aos="fade-up"><img src="https://cdn.discordapp.com/attachments/1212747777004797975/1212785864296366130/star-2.png?ex=65f319da&is=65e0a4da&hm=d355ce86f6c569f6292aac5e17f98a36a0b6bfec62e30b28280a16377053b53a&" alt="Star">CEO(Game)<img src="https://cdn.discordapp.com/attachments/1212747777004797975/1212785864296366130/star-2.png?ex=65f319da&is=65e0a4da&hm=d355ce86f6c569f6292aac5e17f98a36a0b6bfec62e30b28280a16377053b53a&" alt="Star"></h1>
+                        <img src="images/icon2.png" alt="Star" style="height: 100px;">
                         <h1>Niumal Silva</h1>
                         <p>Mr. Niumal Silva is the Chief Operating Officer (COO) of Rudevs Cooperation, a game development company based in Kurunegala, Sri Lanka. As COO, Mr. Silva is responsible for the day-to-day operations of the company, including overseeing game development, managing staff, and ensuring the company meets its financial goals.</p>
                     </div>
