--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             </div>
         </div>
     </div>
+    <div class="cursor-dot" data-cursor-dot></div>
+    <div class="cursor-outline" data-cursor-outline></div>
+        
         <!-- About -->
         <section class="about-area">
             <div class="container">
