--- a/product.html
+++ b/product.html
@@ -52,6 +52,11 @@
                 </div>
             </div>
         </header>
+         <!-- custom-curser  -->
+         <div class="cursor-dot" data-cursor-dot></div>
+         <div class="cursor-outline" data-cursor-outline></div>
+             
+              <!-- custom-curser  -->
         <div class="loader-wrap" id="loader">
         <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
             <path id="svg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
